--- a/examples/display_lvgl_demos/main/CMakeLists.txt
+++ b/examples/display_lvgl_demos/main/CMakeLists.txt
@@ -1,3 +1,11 @@
+set(LV_DEMO_DIR ../managed_components/lvgl__lvgl/demos)
+file(GLOB_RECURSE LV_DEMOS_SOURCES ${LV_DEMO_DIR}/*.c)
+
 idf_component_register(
-    SRCS "dispaly_lvgl_demos_main.c"
-    INCLUDE_DIRS ".")
+    SRCS "dispaly_lvgl_demos_main.c" ${LV_DEMOS_SOURCES}
+    INCLUDE_DIRS "." ${LV_DEMO_DIR})
+
+set_source_files_properties(
+    ${LV_DEMOS_SOURCES}
+    PROPERTIES COMPILE_OPTIONS
+    -DLV_LVGL_H_INCLUDE_SIMPLE)
