--- a/examples/display_lvgl_demos/main/idf_component.yml
+++ b/examples/display_lvgl_demos/main/idf_component.yml
@@ -1,5 +1,5 @@
 description: BSP Display rotation example
 dependencies:
-  esp32_s3_lcd_ev_board:
+  esp32_p4_function_ev_board:
     version: "*"
-    override_path: "../../../bsp/esp32_s3_lcd_ev_board"
+    override_path: "../../../bsp/esp32_p4_function_ev_board"
